增加轮播图

--- a/home/index.html
+++ b/home/index.html
@@ -76,10 +76,300 @@
 		</p>
 		<div class="search_zonghe">
 			<form name="zonghe" method="get" action="http://ip.lotour.com/home/mudidi">
-			<i class="icon-sousuo-sousuo-copy icon iconfont"></i>
+			  <i class="icon-sousuo-sousuo-copy icon iconfont"></i>
 			<input type="text" id="keyword" name="keyword" autocomplete="off" value="" placeholder="搜目的地/旅行家/用户" >
 		  </form>
+			<p>
+				<label>热搜：</label>
+				<a href="">美食多的城市</a>
+				<a href="">美女多的城市</a>
+				<a href="">赏雪</a>
+			</p>
 		</div>
 	</div>
+   <!--主体结构-->
+   <section>
+	   <!--探索区-->
+	   <article class="index-s-item">
+		   <h5 class="index-h5">不要眨眼，还有N种好玩的兴趣主题，等你来探索</h5>
+		   <p class="index-p">Recommended many kinds of tourism interests, just for you.</p>
+		   <div class="index-list">
+			   <ul>
+				   <li>
+					   <a href="" class="img">
+						   <img src="http://img4.lotour.net/bcef/theme//2016/1026/2016102611150199652995.jpg" alt="黑米粒">
+						   <em><span>冰雪奇缘</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="txt">
+						   有384种冰雪灵感等你探索<br>
+						   它们由227位旅行家亲历整理
+					   </p>
+					   <div class="arcer">
+						   <a href="http://zhuanlan.lotour.com/2493" target="_blank" title="白玛南疆">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1219/20161219111854652350340_86.jpg  ">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/922" target="_blank" title="尔冬">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1203/20161203143014837564977_86.jpg">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/109" target="_blank" title="紫荆__">
+							   <img src="http://img1.lotour.net/Inspiration/2015/0924/2015092417343072564574_86.jpg ">
+						   </a>
+						   <a href="http://www.lotour.com/zhengwen/x3736" target="_black" title="更多">
+							   <img src="http://img1.lotour.com/2016/index/arcmore.png">
+						   </a>
+					   </div>
+				   </li>
+				   <li>
+					   <a href="" class="img">
+						   <img src="http://img4.lotour.net/bcef/theme//2016/1026/2016102611150199652995.jpg" alt="黑米粒">
+						   <em><span>冰雪奇缘</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="txt">
+						   有384种冰雪灵感等你探索<br>
+						   它们由227位旅行家亲历整理
+					   </p>
+					   <div class="arcer">
+						   <a href="http://zhuanlan.lotour.com/2493" target="_blank" title="白玛南疆">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1219/20161219111854652350340_86.jpg  ">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/922" target="_blank" title="尔冬">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1203/20161203143014837564977_86.jpg">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/109" target="_blank" title="紫荆__">
+							   <img src="http://img1.lotour.net/Inspiration/2015/0924/2015092417343072564574_86.jpg ">
+						   </a>
+						   <a href="http://www.lotour.com/zhengwen/x3736" target="_black" title="更多">
+							   <img src="http://img1.lotour.com/2016/index/arcmore.png">
+						   </a>
+					   </div>
+				   </li>
+				   <li>
+					   <a href="" class="img">
+						   <img src="http://img4.lotour.net/bcef/theme//2016/1026/2016102611150199652995.jpg" alt="黑米粒">
+						   <em><span>冰雪奇缘</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="txt">
+						   有384种冰雪灵感等你探索<br>
+						   它们由227位旅行家亲历整理
+					   </p>
+					   <div class="arcer">
+						   <a href="http://zhuanlan.lotour.com/2493" target="_blank" title="白玛南疆">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1219/20161219111854652350340_86.jpg  ">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/922" target="_blank" title="尔冬">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1203/20161203143014837564977_86.jpg">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/109" target="_blank" title="紫荆__">
+							   <img src="http://img1.lotour.net/Inspiration/2015/0924/2015092417343072564574_86.jpg ">
+						   </a>
+						   <a href="http://www.lotour.com/zhengwen/x3736" target="_black" title="更多">
+							   <img src="http://img1.lotour.com/2016/index/arcmore.png">
+						   </a>
+					   </div>
+				   </li>
+				   <li>
+					   <a href="" class="img">
+						   <img src="http://img4.lotour.net/bcef/theme//2016/1026/2016102611150199652995.jpg" alt="黑米粒">
+						   <em><span>冰雪奇缘</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="txt">
+						   有384种冰雪灵感等你探索<br>
+						   它们由227位旅行家亲历整理
+					   </p>
+					   <div class="arcer">
+						   <a href="http://zhuanlan.lotour.com/2493" target="_blank" title="白玛南疆">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1219/20161219111854652350340_86.jpg  ">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/922" target="_blank" title="尔冬">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1203/20161203143014837564977_86.jpg">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/109" target="_blank" title="紫荆__">
+							   <img src="http://img1.lotour.net/Inspiration/2015/0924/2015092417343072564574_86.jpg ">
+						   </a>
+						   <a href="http://www.lotour.com/zhengwen/x3736" target="_black" title="更多">
+							   <img src="http://img1.lotour.com/2016/index/arcmore.png">
+						   </a>
+					   </div>
+				   </li>
+				   <li>
+					   <a href="" class="img">
+						   <img src="http://img4.lotour.net/bcef/theme//2016/1026/2016102611150199652995.jpg" alt="黑米粒">
+						   <em><span>冰雪奇缘</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="txt">
+						   有384种冰雪灵感等你探索<br>
+						   它们由227位旅行家亲历整理
+					   </p>
+					   <div class="arcer">
+						   <a href="http://zhuanlan.lotour.com/2493" target="_blank" title="白玛南疆">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1219/20161219111854652350340_86.jpg  ">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/922" target="_blank" title="尔冬">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1203/20161203143014837564977_86.jpg">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/109" target="_blank" title="紫荆__">
+							   <img src="http://img1.lotour.net/Inspiration/2015/0924/2015092417343072564574_86.jpg ">
+						   </a>
+						   <a href="http://www.lotour.com/zhengwen/x3736" target="_black" title="更多">
+							   <img src="http://img1.lotour.com/2016/index/arcmore.png">
+						   </a>
+					   </div>
+				   </li>
+			   </ul>
+			   <div class="in_left in-on"><div class="left-arrow "></div></div>
+			   <div class="in_right in-on"><div class="right-arrow "></div></div>
+		   </div>
+		   <div class="index-list">
+			   <ul>
+				   <li>
+					   <a href="" class="img">
+						   <img src="http://img4.lotour.net/bcef/theme//2016/1026/2016102611150199652995.jpg" alt="黑米粒">
+						   <em><span>冰雪奇缘</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="txt">
+						   有384种冰雪灵感等你探索<br>
+						   它们由227位旅行家亲历整理
+					   </p>
+					   <div class="arcer">
+						   <a href="http://zhuanlan.lotour.com/2493" target="_blank" title="白玛南疆">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1219/20161219111854652350340_86.jpg  ">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/922" target="_blank" title="尔冬">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1203/20161203143014837564977_86.jpg">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/109" target="_blank" title="紫荆__">
+							   <img src="http://img1.lotour.net/Inspiration/2015/0924/2015092417343072564574_86.jpg ">
+						   </a>
+						   <a href="http://www.lotour.com/zhengwen/x3736" target="_black" title="更多">
+							   <img src="http://img1.lotour.com/2016/index/arcmore.png">
+						   </a>
+					   </div>
+				   </li>
+				   <li>
+					   <a href="" class="img">
+						   <img src="http://img4.lotour.net/bcef/theme//2016/1026/2016102611150199652995.jpg" alt="黑米粒">
+						   <em><span>冰雪奇缘</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="txt">
+						   有384种冰雪灵感等你探索<br>
+						   它们由227位旅行家亲历整理
+					   </p>
+					   <div class="arcer">
+						   <a href="http://zhuanlan.lotour.com/2493" target="_blank" title="白玛南疆">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1219/20161219111854652350340_86.jpg  ">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/922" target="_blank" title="尔冬">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1203/20161203143014837564977_86.jpg">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/109" target="_blank" title="紫荆__">
+							   <img src="http://img1.lotour.net/Inspiration/2015/0924/2015092417343072564574_86.jpg ">
+						   </a>
+						   <a href="http://www.lotour.com/zhengwen/x3736" target="_black" title="更多">
+							   <img src="http://img1.lotour.com/2016/index/arcmore.png">
+						   </a>
+					   </div>
+				   </li>
+				   <li>
+					   <a href="" class="img">
+						   <img src="http://img4.lotour.net/bcef/theme//2016/1026/2016102611150199652995.jpg" alt="黑米粒">
+						   <em><span>冰雪奇缘</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="txt">
+						   有384种冰雪灵感等你探索<br>
+						   它们由227位旅行家亲历整理
+					   </p>
+					   <div class="arcer">
+						   <a href="http://zhuanlan.lotour.com/2493" target="_blank" title="白玛南疆">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1219/20161219111854652350340_86.jpg  ">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/922" target="_blank" title="尔冬">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1203/20161203143014837564977_86.jpg">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/109" target="_blank" title="紫荆__">
+							   <img src="http://img1.lotour.net/Inspiration/2015/0924/2015092417343072564574_86.jpg ">
+						   </a>
+						   <a href="http://www.lotour.com/zhengwen/x3736" target="_black" title="更多">
+							   <img src="http://img1.lotour.com/2016/index/arcmore.png">
+						   </a>
+					   </div>
+				   </li>
+				   <li>
+					   <a href="" class="img">
+						   <img src="http://img4.lotour.net/bcef/theme//2016/1026/2016102611150199652995.jpg" alt="黑米粒">
+						   <em><span>冰雪奇缘</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="txt">
+						   有384种冰雪灵感等你探索<br>
+						   它们由227位旅行家亲历整理
+					   </p>
+					   <div class="arcer">
+						   <a href="http://zhuanlan.lotour.com/2493" target="_blank" title="白玛南疆">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1219/20161219111854652350340_86.jpg  ">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/922" target="_blank" title="尔冬">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1203/20161203143014837564977_86.jpg">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/109" target="_blank" title="紫荆__">
+							   <img src="http://img1.lotour.net/Inspiration/2015/0924/2015092417343072564574_86.jpg ">
+						   </a>
+						   <a href="http://www.lotour.com/zhengwen/x3736" target="_black" title="更多">
+							   <img src="http://img1.lotour.com/2016/index/arcmore.png">
+						   </a>
+					   </div>
+				   </li>
+				   <li>
+					   <a href="" class="img">
+						   <img src="http://img4.lotour.net/bcef/theme//2016/1026/2016102611150199652995.jpg" alt="黑米粒">
+						   <em><span>冰雪奇缘</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="txt">
+						   有384种冰雪灵感等你探索<br>
+						   它们由227位旅行家亲历整理
+					   </p>
+					   <div class="arcer">
+						   <a href="http://zhuanlan.lotour.com/2493" target="_blank" title="白玛南疆">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1219/20161219111854652350340_86.jpg  ">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/922" target="_blank" title="尔冬">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1203/20161203143014837564977_86.jpg">
+						   </a>
+						   <a href="http://zhuanlan.lotour.com/109" target="_blank" title="紫荆__">
+							   <img src="http://img1.lotour.net/Inspiration/2015/0924/2015092417343072564574_86.jpg ">
+						   </a>
+						   <a href="http://www.lotour.com/zhengwen/x3736" target="_black" title="更多">
+							   <img src="http://img1.lotour.com/2016/index/arcmore.png">
+						   </a>
+					   </div>
+				   </li>
+			   </ul>
+			   <div class="in_left in-on"><div class="left-arrow "></div></div>
+			   <div class="in_right in-on"><div class="right-arrow "></div></div>
+		   </div>
+	   </article>
+	   <!--专业评价-->
+	   <article class="index-b-item"></article>
+	   <!--主题活动-->
+	   <article class="index-ad-item"></article>
+   </section>
 </body>
 </html>
