--- a/home/index.html
+++ b/home/index.html
@@ -6,7 +6,7 @@
 	<link href="http://www.lotour.com/favicon2.ico">
 	<link rel="stylesheet" type="text/css" href="../common_css/common.css">
 	<link rel="stylesheet" type="text/css" href="css/home_style.css">
-	<link rel="stylesheet" href="//at.alicdn.com/t/font_nhma25b0eemnp14i.css">
+	<link rel="stylesheet" href="//at.alicdn.com/t/font_qg3rh90bcgl23xr.css">
 </head>
 <body>
 	<header>
@@ -367,9 +367,310 @@
 		   </div>
 	   </article>
 	   <!--专业评价-->
-	   <article class="index-b-item"></article>
-	   <!--主题活动-->
-	   <article class="index-ad-item"></article>
+	   <article class="index-b-item">
+		   <h5 class="index-h5">
+			   <a href="" target="_blank" >
+			   来自专业评鉴的全球灵感榜单，等你来发现
+			   </a>
+		   </h5>
+		   <p class="index-p">Recommended global travel inspirations from professional evaluation, just for you.</p>
+		   <div class="index-b-list">
+			   <ul>
+				   <li>
+					   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" class="img">
+						   <img src="http://img1.lotour.net/Inspiration/2016/1229/20161229230402641983907_295.jpg">
+						   <em><span class="t2">绿皮火车<br>带你北上看雪</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="rk clearfix">
+						   <a target="_blank" href="">冰雪</a>
+						   <a target="_blank" href="" >童话世界</a>
+					   </p>
+					   <h5>
+						   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" >看雪季，这里的雪景更有看头些</a>
+					   </h5>
+					   <p class="tool">
+						   <i class="icon iconfont icon-dingwei"></i>
+						   <a href="http://daxinganling.lotour.com/beijicun1/" target="_blank" title="北极村" >北极村</a>
+						   <i class="icon iconfont icon-yanjing">2011</i>
+					   </p>
+					   <hr height="1px" width="70%" style="color: #555;margin-top: 20px;margin-bottom: 20px;">
+					   <div class="rter">
+						   <a target="_blank" href="http://zhuanlan.lotour.com/2483">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1215/2016121520525977739199_86.jpg">
+						   </a>
+						   <div class="p">
+							   <a target="_blank" href="http://zhuanlan.lotour.com/2483"">Coco君</a>
+							   <p>旅游达人 聪明旅行家 试睡员 微博旅</p>
+						   </div>
+					   </div>
+				   </li>
+				   <li>
+					   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" class="img">
+						   <img src="http://img1.lotour.net/Inspiration/2016/1229/20161229230402641983907_295.jpg">
+						   <em><span class="t2">绿皮火车<br>带你北上看雪</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="rk clearfix">
+						   <a target="_blank" href="">冰雪</a>
+						   <a target="_blank" href="" >童话世界</a>
+					   </p>
+					   <h5>
+						   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" >看雪季，这里的雪景更有看头些</a>
+					   </h5>
+					   <p class="tool">
+						   <i class="icon iconfont icon-dingwei"></i>
+						   <a href="http://daxinganling.lotour.com/beijicun1/" target="_blank" title="北极村" >北极村</a>
+						   <i class="icon iconfont icon-yanjing">2011</i>
+					   </p>
+					   <hr height="1px" width="70%" style="color: #555;margin-top: 20px;margin-bottom: 20px;">
+					   <div class="rter">
+						   <a target="_blank" href="http://zhuanlan.lotour.com/2483">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1215/2016121520525977739199_86.jpg">
+						   </a>
+						   <div class="p">
+							   <a target="_blank" href="http://zhuanlan.lotour.com/2483"">Coco君</a>
+							   <p>旅游达人 聪明旅行家 试睡员 微博旅</p>
+						   </div>
+					   </div>
+				   </li>
+				   <li>
+					   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" class="img">
+						   <img src="http://img1.lotour.net/Inspiration/2016/1229/20161229230402641983907_295.jpg">
+						   <em><span class="t2">绿皮火车<br>带你北上看雪</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="rk clearfix">
+						   <a target="_blank" href="">冰雪</a>
+						   <a target="_blank" href="" >童话世界</a>
+					   </p>
+					   <h5>
+						   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" >看雪季，这里的雪景更有看头些</a>
+					   </h5>
+					   <p class="tool">
+						   <i class="icon iconfont icon-dingwei"></i>
+						   <a href="http://daxinganling.lotour.com/beijicun1/" target="_blank" title="北极村" >北极村</a>
+						   <i class="icon iconfont icon-yanjing">2011</i>
+					   </p>
+					   <hr height="1px" width="70%" style="color: #555;margin-top: 20px;margin-bottom: 20px;">
+					   <div class="rter">
+						   <a target="_blank" href="http://zhuanlan.lotour.com/2483">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1215/2016121520525977739199_86.jpg">
+						   </a>
+						   <div class="p">
+							   <a target="_blank" href="http://zhuanlan.lotour.com/2483"">Coco君</a>
+							   <p>旅游达人 聪明旅行家 试睡员 微博旅</p>
+						   </div>
+					   </div>
+				   </li>
+				   <li>
+					   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" class="img">
+						   <img src="http://img1.lotour.net/Inspiration/2016/1229/20161229230402641983907_295.jpg">
+						   <em><span class="t2">绿皮火车<br>带你北上看雪</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="rk clearfix">
+						   <a target="_blank" href="">冰雪</a>
+						   <a target="_blank" href="" >童话世界</a>
+					   </p>
+					   <h5>
+						   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" >看雪季，这里的雪景更有看头些</a>
+					   </h5>
+					   <p class="tool">
+						   <i class="icon iconfont icon-dingwei"></i>
+						   <a href="http://daxinganling.lotour.com/beijicun1/" target="_blank" title="北极村" >北极村</a>
+						   <i class="icon iconfont icon-yanjing">2011</i>
+					   </p>
+					   <hr height="1px" width="70%" style="color: #555;margin-top: 20px;margin-bottom: 20px;">
+					   <div class="rter">
+						   <a target="_blank" href="http://zhuanlan.lotour.com/2483">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1215/2016121520525977739199_86.jpg">
+						   </a>
+						   <div class="p">
+							   <a target="_blank" href="http://zhuanlan.lotour.com/2483"">Coco君</a>
+							   <p>旅游达人 聪明旅行家 试睡员 微博旅</p>
+						   </div>
+					   </div>
+				   </li>
+				   <li>
+					   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" class="img">
+						   <img src="http://img1.lotour.net/Inspiration/2016/1229/20161229230402641983907_295.jpg">
+						   <em><span class="t2">绿皮火车<br>带你北上看雪</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="rk clearfix">
+						   <a target="_blank" href="">冰雪</a>
+						   <a target="_blank" href="" >童话世界</a>
+					   </p>
+					   <h5>
+						   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" >看雪季，这里的雪景更有看头些</a>
+					   </h5>
+					   <p class="tool">
+						   <i class="icon iconfont icon-dingwei"></i>
+						   <a href="http://daxinganling.lotour.com/beijicun1/" target="_blank" title="北极村" >北极村</a>
+						   <i class="icon iconfont icon-yanjing">2011</i>
+					   </p>
+					   <hr height="1px" width="70%" style="color: #555;margin-top: 20px;margin-bottom: 20px;">
+					   <div class="rter">
+						   <a target="_blank" href="http://zhuanlan.lotour.com/2483">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1215/2016121520525977739199_86.jpg">
+						   </a>
+						   <div class="p">
+							   <a target="_blank" href="http://zhuanlan.lotour.com/2483"">Coco君</a>
+							   <p>旅游达人 聪明旅行家 试睡员 微博旅</p>
+						   </div>
+					   </div>
+				   </li>
+				   <li>
+					   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" class="img">
+						   <img src="http://img1.lotour.net/Inspiration/2016/1229/20161229230402641983907_295.jpg">
+						   <em><span class="t2">绿皮火车<br>带你北上看雪</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="rk clearfix">
+						   <a target="_blank" href="">冰雪</a>
+						   <a target="_blank" href="" >童话世界</a>
+					   </p>
+					   <h5>
+						   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" >看雪季，这里的雪景更有看头些</a>
+					   </h5>
+					   <p class="tool">
+						   <i class="icon iconfont icon-dingwei"></i>
+						   <a href="http://daxinganling.lotour.com/beijicun1/" target="_blank" title="北极村" >北极村</a>
+						   <i class="icon iconfont icon-yanjing">2011</i>
+					   </p>
+					   <hr height="1px" width="70%" style="color: #555;margin-top: 20px;margin-bottom: 20px;">
+					   <div class="rter">
+						   <a target="_blank" href="http://zhuanlan.lotour.com/2483">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1215/2016121520525977739199_86.jpg">
+						   </a>
+						   <div class="p">
+							   <a target="_blank" href="http://zhuanlan.lotour.com/2483"">Coco君</a>
+							   <p>旅游达人 聪明旅行家 试睡员 微博旅</p>
+						   </div>
+					   </div>
+				   </li>
+				   <li>
+					   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" class="img">
+						   <img src="http://img1.lotour.net/Inspiration/2016/1229/20161229230402641983907_295.jpg">
+						   <em><span class="t2">绿皮火车<br>带你北上看雪</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="rk clearfix">
+						   <a target="_blank" href="">冰雪</a>
+						   <a target="_blank" href="" >童话世界</a>
+					   </p>
+					   <h5>
+						   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" >看雪季，这里的雪景更有看头些</a>
+					   </h5>
+					   <p class="tool">
+						   <i class="icon iconfont icon-dingwei"></i>
+						   <a href="http://daxinganling.lotour.com/beijicun1/" target="_blank" title="北极村" >北极村</a>
+						   <i class="icon iconfont icon-yanjing">2011</i>
+					   </p>
+					   <hr height="1px" width="70%" style="color: #555;margin-top: 20px;margin-bottom: 20px;">
+					   <div class="rter">
+						   <a target="_blank" href="http://zhuanlan.lotour.com/2483">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1215/2016121520525977739199_86.jpg">
+						   </a>
+						   <div class="p">
+							   <a target="_blank" href="http://zhuanlan.lotour.com/2483"">Coco君</a>
+							   <p>旅游达人 聪明旅行家 试睡员 微博旅</p>
+						   </div>
+					   </div>
+				   </li>
+				   <li>
+					   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" class="img">
+						   <img src="http://img1.lotour.net/Inspiration/2016/1229/20161229230402641983907_295.jpg">
+						   <em><span class="t2">绿皮火车<br>带你北上看雪</span></em>
+						   <i class="i1"></i>
+						   <i class="i2"></i>
+					   </a>
+					   <p class="rk clearfix">
+						   <a target="_blank" href="">冰雪</a>
+						   <a target="_blank" href="" >童话世界</a>
+					   </p>
+					   <h5>
+						   <a target="_blank" href="http://www.lotour.com/zhengwen/2/lg-jc-28604.shtml" >看雪季，这里的雪景更有看头些</a>
+					   </h5>
+					   <p class="tool">
+						   <i class="icon iconfont icon-dingwei"></i>
+						   <a href="http://daxinganling.lotour.com/beijicun1/" target="_blank" title="北极村" >北极村</a>
+						   <i class="icon iconfont icon-yanjing">2011</i>
+					   </p>
+					   <hr height="1px" width="70%" style="color: #555;margin-top: 20px;margin-bottom: 20px;">
+					   <div class="rter">
+						   <a target="_blank" href="http://zhuanlan.lotour.com/2483">
+							   <img src="http://img1.lotour.net/Inspiration/2016/1215/2016121520525977739199_86.jpg">
+						   </a>
+						   <div class="p">
+							   <a target="_blank" href="http://zhuanlan.lotour.com/2483"">Coco君</a>
+							   <p>旅游达人 聪明旅行家 试睡员 微博旅</p>
+						   </div>
+					   </div>
+				   </li>
+			   </ul>
+		   </div>
+	   </article>
+	   <!--广告-->
+	   <article class="index-ad-item">
+		   <h5 class="index-h5">缤纷呈现，全球最有趣的主题活动<br>
+			   想FUN肆？现在就带上你的好奇心，一起来体验吧！
+		   </h5>
+		   <ul>
+			   <li>
+				   <a target="_blank" href="http://adclient.lotour.com/Forms/comment/adurl.aspx?id=6875" class="img">
+					   <img src="http://img3.lotour.net/bcef/2017/01/2017010316121156856732.jpg">
+					   <div class="adv"><p>&nbsp;<span>推广</span>&nbsp;</p></div>
+					   <em><span>圣洁拉萨健康之旅</span></em>
+					   <i class="i1"></i><i class="i2"></i>
+				   </a>
+				   <p class="adv-p">冬游拉萨 畅享暖阳<br>
+					   拉萨市旅游局
+				   </p>
+			   </li>
+			   <li>
+				   <a target="_blank" href="http://adclient.lotour.com/Forms/comment/adurl.aspx?id=6875" class="img">
+					   <img src="http://img3.lotour.net/bcef/2017/01/2017010316121156856732.jpg">
+					   <div class="adv"><p>&nbsp;<span>推广</span>&nbsp;</p></div>
+					   <em><span>圣洁拉萨健康之旅</span></em>
+					   <i class="i1"></i><i class="i2"></i>
+				   </a>
+				   <p class="adv-p">冬游拉萨 畅享暖阳<br>
+					   拉萨市旅游局
+				   </p>
+			   </li>
+			   <li>
+				   <a target="_blank" href="http://adclient.lotour.com/Forms/comment/adurl.aspx?id=6875" class="img">
+					   <img src="http://img3.lotour.net/bcef/2017/01/2017010316121156856732.jpg">
+					   <div class="adv"><p>&nbsp;<span>推广</span>&nbsp;</p></div>
+					   <em><span>圣洁拉萨健康之旅</span></em>
+					   <i class="i1"></i><i class="i2"></i>
+				   </a>
+				   <p class="adv-p">冬游拉萨 畅享暖阳<br>
+					   拉萨市旅游局
+				   </p>
+			   </li>
+			   <li>
+				   <a target="_blank" href="http://adclient.lotour.com/Forms/comment/adurl.aspx?id=6875" class="img">
+					   <img src="http://img3.lotour.net/bcef/2017/01/2017010316121156856732.jpg">
+					   <div class="adv"><p>&nbsp;<span>推广</span>&nbsp;</p></div>
+					   <em><span>圣洁拉萨健康之旅</span></em>
+					   <i class="i1"></i><i class="i2"></i>
+				   </a>
+				   <p class="adv-p">冬游拉萨 畅享暖阳<br>
+					   拉萨市旅游局
+				   </p>
+			   </li>
+		   </ul>
+	   </article>
    </section>
 </body>
 </html>
